# cmake_glfw_template

./: .gitignore  CMakeLists.txt  build.sh  run.sh
